<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/createTaskScreenLayout"
    tools:context=".CreateTaskScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CreateTaskScreen">
        <TextView
            android:id="@+id/backTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textColor="@color/whiteBlue"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskTitleQuestion"
            android:textSize="30sp"
            android:id="@+id/questionforTitle"
            android:layout_margin="10dp"
            android:textColor="@color/whiteBlue"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:padding="10dp"
            android:background="@color/whiteBlue"
            android:textColor="@color/blueNight"
            android:minLines="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskCategoryQuestion"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="@color/whiteBlue"/>

        <Spinner
            android:id="@+id/contactSpinner"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskContactQuestion"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="@color/whiteBlue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/r_phone"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/input_phone"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:text="@string/callValue"
                android:textAlignment="textEnd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:id="@+id/r_mail"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/input_email"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:text="@string/emailValue"
                android:textAlignment="textEnd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskCategoryOther"
                android:textSize="20sp"
                android:id="@+id/r_contact"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/input_contact"
                android:textColor="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:textAlignment="textEnd"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskDetailsQuestion"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="@color/whiteBlue"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:id="@+id/input_description"
            android:layout_marginEnd="10sp"
            android:background="@color/whiteBlue"
            android:textColor="@color/blueNight"
            android:padding="10dp"
            android:minLines="4"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskAdressQuestion"
            android:id="@+id/r_address"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/whiteBlue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskWhenQuestion"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="@color/whiteBlue"/>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_calendar"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskTimeQuestion"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="@color/whiteBlue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/input_hours"
                android:hint="@string/Hour"
                android:inputType="time"
                android:textColor="@color/whiteBlue"
                android:textColorHint="@color/whiteBlue"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hourthing"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/whiteBlue"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="@string/Minut"
                android:id="@+id/input_minutes"
                android:inputType="time"
                android:textColor="@color/whiteBlue"
                android:textColorHint="@color/whiteBlue"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/task_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textSize="30sp"/>

    </LinearLayout>

</ScrollView>