<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/forgotPassword"
    android:layout_height="match_parent"
    android:background="@color/blueNight"
    android:orientation="vertical"
    tools:context=".SingUpScreen">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_android_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterMail"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawablePadding="15dp"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="@color/blueNight"
        android:textColorHint="@color/whiteBlue"
        android:background="@drawable/rounded_input"
        android:textAlignment="textStart"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:padding="15dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordMessage"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorMessageLogin"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/redError"/>
    <Button
        android:id="@+id/send"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>