<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/loginScreenLayout"
    android:layout_height="match_parent"
    android:background="@color/blueNight"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseLoginMessage"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_user"
        android:drawableTint="@color/blueNight"
        android:textSize="20sp"
        android:drawablePadding="15dp"
        android:maxLines="1"
        android:textColorHint="@color/whiteBlue"
        android:background="@drawable/rounded_input"
        android:textAlignment="textStart"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:id="@+id/password"
        android:drawablePadding="15dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/blueNight"
        android:textColorHint="@color/whiteBlue"
        android:background="@drawable/rounded_input"
        android:textAlignment="textStart"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotThePassword"
        android:id="@+id/forgotThePasswordText"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorMessageLogin"
        android:textSize="20sp"
        android:id="@+id/errorText"
        android:textAlignment="center"
        android:textColor="@color/redError"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/whiteBlue"/>
</LinearLayout>