<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileScreen"
    android:background="@color/blueNet"
    tools:context=".ProfileScreen">


    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/myProfile"
        android:textColor="@color/whiteBlue"
        android:textSize="30sp"
        app:drawableStartCompat="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toTopOf="@id/middle"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/middle"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imageView1"
            android:src="@mipmap/ic_ivan">
        </ImageView>
        <TextView
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTest"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"/>
        <TextView
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTest"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:drawablePadding="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"/>
        <TextView
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"/>
        <TextView
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress2"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"/>
        <TextView
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nulber"
            android:textSize="18sp"
            android:drawablePadding="20dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_profile"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/profileSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_10"
            android:drawableTint="@color/whiteBlue"
            android:text="@string/settingsProfile"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/contactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_10"
            android:drawableTint="@color/whiteBlue"
            android:text="@string/contactUs"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_10"
            android:drawableTint="@color/whiteBlue"
            android:text="@string/privacy"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_10"
            android:drawableTint="@color/whiteBlue"
            android:text="@string/information"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteBlue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/logOut"
            android:textAlignment="center"
            android:textColor="@color/whiteBlue"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>